--- a/index.html
+++ b/index.html
@@ -26,16 +26,32 @@
     .hero h1{margin:0 0 28px; font-size:3.4rem; font-weight:900; line-height:1.15; letter-spacing:-.02em}
     .hero p.sub{margin:6px 0; font-size:1.25rem; font-weight:700; color:var(--sub); letter-spacing:-.01em}
 
-    /* Brand Promises */
-    .promises{margin-top:34px; display:flex; flex-direction:column; gap:18px; align-items:center}
-    .promise{font-size:1.35rem; font-weight:900; letter-spacing:-.01em; color:var(--mocha)}
-
-    /* Buttons */
+    /* Buttons & CTA Dock */
     .btn{display:inline-block; padding:13px 20px; border-radius:12px; font-weight:800; text-decoration:none; transition:.2s}
     .btn.primary{background:var(--mocha); color:#fff}
     .btn.primary:hover{background:var(--mocha-dark)}
     .btn.secondary{border:2px solid var(--mocha); color:var(--mocha); background:#fff}
     .btn.secondary:hover{background:#f7f5f4}
+
+    .cta-dock{
+      position:fixed; right:22px; top:50%; transform:translateY(-50%);
+      display:flex; flex-direction:column; gap:12px; z-index:60;
+      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
+      background:#fff; padding:18px; border-radius:14px; border:1px solid var(--line);
+    }
+    .cta-promises{
+      margin-top:10px;
+      font-size:.9rem;
+      font-weight:700;
+      color:var(--sub);
+      display:flex; flex-direction:column; gap:6px;
+      line-height:1.4;
+    }
+    .cta-promises span::before{content:"• "; color:var(--mocha); font-weight:900}
+
+    @media (max-width:1024px){
+      .cta-dock{top:auto; bottom:16px; right:16px; transform:none; flex-direction:column; width:calc(100% - 32px)}
+    }
 
     /* Cases */
     .cases{background:#f6f6f6}
@@ -53,16 +69,6 @@
     .project-card img{width:100%; height:180px; object-fit:cover; border-radius:10px}
     .project-card h3{margin:8px 0 4px; font-size:1.15rem; font-weight:700}
     .muted{color:var(--muted); font-size:.9rem}
-
-    /* Fixed CTA Dock */
-    .cta-dock{
-      position:fixed; right:22px; top:50%; transform:translateY(-50%);
-      display:flex; flex-direction:column; gap:10px; z-index:60;
-      filter:drop-shadow(0 8px 16px rgba(0,0,0,.12));
-    }
-    @media (max-width:1024px){
-      .cta-dock{top:auto; bottom:16px; transform:none; right:16px; flex-direction:row}
-    }
   </style>
 </head>
 <body>
@@ -73,6 +79,12 @@
   <div class="cta-dock" aria-label="빠른 참여">
     <a href="project_list.html" class="btn primary">지금 구조자 만나보기</a>
     <a href="create.html" class="btn secondary">등록하기</a>
+    <div class="cta-promises">
+      <span>개인 ↔ 개인 직접 연결</span>
+      <span>후원금 100% 전달</span>
+      <span>구조자 30% 책임</span>
+      <span>증빙 필수, 투명성 보장</span>
+    </div>
   </div>
 
   <!-- Hero -->
@@ -81,12 +93,6 @@
       <h1>개인↔개인을 연결하는, 국내 첫 기부 플랫폼</h1>
       <p class="sub">#흩어진 개인 구조 활동을 PAW에서 연결하고 싶었습니다.</p>
       <p class="sub">#혼자 시작한 구조가 혼자 끝나지 않도록 투명하게</p>
-      <div class="promises">
-        <div class="promise">개인 ↔ 개인 직접 연결</div>
-        <div class="promise">후원금 100% 전달</div>
-        <div class="promise">구조자 30% 책임</div>
-        <div class="promise">증빙 필수, 투명성 보장</div>
-      </div>
     </div>
   </section>
 
